@@ -1,4 +1,4 @@
-/* $Id: piggy.c,v 1.53 2004-08-28 23:17:45 schaffner Exp $ */
+/* $Id: piggy.c,v 1.54 2004-10-09 21:52:43 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -24,7 +24,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: piggy.c,v 1.53 2004-08-28 23:17:45 schaffner Exp $";
+static char rcsid[] = "$Id: piggy.c,v 1.54 2004-10-09 21:52:43 schaffner Exp $";
 #endif
 
 
@@ -2102,7 +2102,8 @@ void load_d1_bitmap_replacements()
 	case D1_10_BIG_PIGSIZE:
 	case D1_10_PIGSIZE:
 		pig_data_start = 0;
-		Warning(D1_PIG_LOAD_FAILED ". descent.pig of v1.0 and all PC shareware versions not supported.");
+		Warning(D1_PIG_LOAD_FAILED ". descent.pig of v1.0 and all PC shareware versions not supported."); // KEEP THIS IN SYNC WITH d1_pig_present IN gamemine.c
+		cfclose (d1_Piggy_fp);
 		return;
 		break;
 	default:
